K8S/commands-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: commands-nodeport-service
spec:
  type: NodePort
  selector:
    app: commandsservice
  ports:
    - name: commandsservice
      protocol: TCP
      port: 80
      targetPort: 80
