K8S/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 15672
              name: rabbitmq-mgmt-p # management port
            - containerPort: 5672
              name: rabbitmq-msg-p # message port

--- # Cluster Ip

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: rabbitmq 
  ports:
    - name: rabbitmq-mgmt-p
      protocol: TCP
      port: 15672
      targetPort: 15672 
    - name: rabbitmq-msg-p
      protocol: TCP
      port: 5672
      targetPort: 5672 

--- # load balancer
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    # We specify name because we have multiple names
    - name: rabbitmq-mgmt-p 
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rabbitmq-msg-p # message
      protocol: TCP
      port: 5672
      targetPort: 5672
